chore: register /backpack command in plugin.yml for Spigot and Paper variants

--- a/server/papermc/engine/src/main/resources/plugin.yml
+++ b/server/papermc/engine/src/main/resources/plugin.yml
@@ -1,6 +1,13 @@
 name: MCEngineBackPack
 version: ${version}
-main: io.github.mcengine.papermc.backpack.engine.MCEngineBackPackSpigotMC
+main: io.github.mcengine.papermc.backpack.engine.MCEngineBackPackPaperMC
 author: MCEngine
 description: MCEngine BackPack
 api-version: 1.13
+
+commands:
+  backpack:
+    description: Main command for managing backpacks
+    usage: /<command> default give <player> <hdb-id> <rows(1-6)>
+    permission: mcengine.backpack.give
+    permission-message: You do not have permission to use this command.
